Add notification feature

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="thunder">#2a1a29</color>
     <color name="gray">#999999</color>
     <color name="mauvelous">#f185ae</color>
+    <color name="mystic">#dbe7ea</color>
 </resources>
