--- a/app/src/main/res/layout/fragment_infor_component.xml
+++ b/app/src/main/res/layout/fragment_infor_component.xml
@@ -4,12 +4,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.mainscreen.profile.options.InforComponent">
+    tools:context=".ui.mainscreen.profile.options.InforComponent"
+    android:background="@color/thunder">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/top_app_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@color/black">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
@@ -21,7 +26,7 @@
                 android:backgroundTint="@color/white"
                 android:scaleType="centerInside"
                 android:layout_width="?attr/actionBarSize"
-                android:layout_height="?attr/actionBarSize"/>
+                android:layout_height="?attr/actionBarSize" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -40,8 +45,7 @@
         app:layout_constraintTop_toBottomOf="@id/top_app_bar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:padding="10dp"
-        android:background="@color/transparent">
+        android:padding="10dp">
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
@@ -52,7 +56,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:background="@color/white"
+                android:background="@color/mystic"
                 android:padding="5dp">
 
                 <TextView
