Remove the layout color

--- a/app/src/main/res/layout/fragment_infor_component.xml
+++ b/app/src/main/res/layout/fragment_infor_component.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.mainscreen.profile.options.InforComponent"
-    android:background="@color/thunder">
+    tools:context=".ui.mainscreen.profile.options.InforComponent">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/top_app_bar"
@@ -13,8 +12,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:background="@color/black">
+        app:layout_constraintEnd_toEndOf="parent">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
