--- a/app/src/main/res/drawable/image_gradient.xml
+++ b/app/src/main/res/drawable/image_gradient.xml
@@ -3,8 +3,8 @@
     android:shape="rectangle">
     <gradient
         android:startColor="@color/transparent"
-        android:endColor="@color/black"
+        android:endColor="@color/white"
         android:angle="270"
         android:centerY="0.65"
-        android:centerColor="@color/black"/>
+        android:centerColor="@color/white"/>
 </shape>
