--- a/app/src/main/res/layout/activity_message_detail.xml
+++ b/app/src/main/res/layout/activity_message_detail.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.mainscreen.notification.MessageDetailActivity"
-    android:background="@color/thunder">
+    tools:context=".ui.mainscreen.notification.MessageDetailActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/top_app_bar"
@@ -14,8 +13,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:background="@color/black">
+        app:layout_constraintEnd_toEndOf="parent">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
@@ -31,8 +29,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="@string/user_information_label"
-                android:textColor="@color/white"
+                android:text="@string/message_detail_label"
                 android:textStyle="bold"
                 android:textSize="25sp"
                 android:gravity="center_vertical"
@@ -46,7 +43,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:background="@color/mystic"
         android:padding="10dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
