--- a/app/src/main/res/layout/fragment_notification_component.xml
+++ b/app/src/main/res/layout/fragment_notification_component.xml
@@ -5,8 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.mainscreen.notification.NotificationComponent"
-    android:background="@color/black">
+    tools:context=".ui.mainscreen.notification.NotificationComponent">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/top_app_bar"
