--- a/app/src/main/res/layout/fragment_search_component.xml
+++ b/app/src/main/res/layout/fragment_search_component.xml
@@ -6,31 +6,31 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.mainscreen.search.SearchComponent"
-    android:padding="12dp"
-    android:background="@color/black">
+    android:padding="12dp">
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/black">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/search_view_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <androidx.appcompat.widget.SearchView
-                android:id="@+id/search_view_bar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:iconifiedByDefault="false"
-                android:queryHint="Movie..."
-                app:iconifiedByDefault="false"
-                android:layout_marginBottom="12dp"/>
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/search_result_list_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                tools:listitem="@layout/item_movie"/>
-        </LinearLayout>
-    </ScrollView>
+            android:iconifiedByDefault="false"
+            android:queryHint="Movie..."
+            app:iconifiedByDefault="false"
+            android:layout_marginBottom="12dp"
+            android:elevation="5dp"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/search_result_list_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:listitem="@layout/item_movie"/>
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
