--- a/app/src/main/res/layout/fragment_top_rate_component.xml
+++ b/app/src/main/res/layout/fragment_top_rate_component.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".home.TopRateComponent"
-    android:background="@color/black">
+    tools:context=".home.TopRateComponent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
