--- a/app/src/main/res/layout/fragment_top_rate_component.xml
+++ b/app/src/main/res/layout/fragment_top_rate_component.xml
@@ -3,32 +3,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".home.TopRateComponent">
+    tools:context=".home.TopRateComponent"
+    android:layout_marginBottom="10dp">
+
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/fragment_title"
-                android:text="@string/top_rated_label"
-                style="@style/medium_label_style"/>
-            <ImageButton
-                android:id="@+id/see_more_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/baseline_arrow_right_24"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:backgroundTint="@color/white"
-                android:elevation="5dp"/>
-        </RelativeLayout>
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/top_movie_recycle_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:listitem="@layout/top_rate_movie_item"/>
-    </LinearLayout>
+            android:orientation="vertical">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/fragment_title"
+                    android:text="@string/top_rated_label"
+                    style="@style/medium_label_style"
+                    android:elevation="10dp"/>
+                <ImageButton
+                    android:id="@+id/see_more_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/baseline_arrow_right_24"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:backgroundTint="@color/white"
+                    android:elevation="10dp"/>
+            </RelativeLayout>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/top_movie_recycle_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:listitem="@layout/top_rate_movie_item"/>
+        </LinearLayout>
+
 </FrameLayout>
