Fix update the wish list screen after remove the movie

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="gray">#999999</color>
     <color name="mauvelous">#f185ae</color>
     <color name="mystic">#dbe7ea</color>
+    <color name="alizarin_crimson">#eb1e24</color>
 </resources>
